# sosilogikk

./: .GITIGNORE  .gitignore  LICENSE  PKG-INFO  README.md  pyproject.toml  requirements.txt  setup.py  sositest.py
.history/: setup_20241002163055.py  setup_20241118121614.py  setup_20241128123838.py  sosilogikk_analyse_20241128125305.py  sosilogikk_analyse_20241128131624.py  sosilogikk_analyse_20241128141006.py  sosilogikk_analyse_20241128141056.py  sosilogikk_analyse_20241128141107.py  sosilogikk_analyse_20241128141253.py  sosilogikk_analyse_20241128141947.py  sosilogikk_analyse_20241128142506.py  sosilogikk_analyse_20241128142647.py  sosilogikk_analyse_template_20241128142752.py  sosilogikk_analyse_template_20241128142807.py  sosilogikk_analyse_template_20241128142810.py  sosilogikk_analyse_template_20241128142817.py  sosilogikk_analyse_template_20241128142912.py  sosilogikk_analyse_template_20241128142931.py  sosilogikk_analyse_template_20241128142938.py  sosilogikk_analyse_template_20241128143026.py  sosilogikk_analyse_template_20241128143132.py  sosilogikk_analyse_template_20241128143224.py  sosilogikk_analyse_template_20241128143239.py  sosilogikk_analyse_template_20241128143330.py  sosilogikk_analyse_template_20241128143358.py  sosilogikk_analyse_template_20241128143423.py  sosilogikk_analyse_template_20241128143438.py  sosilogikk_analyse_template_20241128143441.py  sosilogikk_analyse_template_20241128143605.py  sosilogikk_analyse_template_20241128143623.py  sosilogikk_analyse_template_20241128143652.py  sosilogikk_analyse_template_20241128143711.py  (+6 more)
(+55 files in other folders)
