[project]
name = "sosilogikk"
version = "2.0.1"
description = "A library for handling and processing SOSI geospatial data."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "geopandas>=1.1.1",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "ruff>=0.14.6",
    "shapely>=2.1.2",
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
